move index page to outermost folder

--- a/Website/Hub.html
+++ b/Website/Hub.html
@@ -34,8 +34,42 @@
       <h1>Hello there</h1>
       <div class="line"></div>
     </div>
-    <h1 class="Figure">
-    <div></div>
+   <div class="row">
+    <div class="col">
+      <img src="" alt="">
+      <h4>Break</h4>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, non atque. Facere dicta magni, eveniet excepturi natus animi aspernatur, sapiente odit rerum velit quidem necessitatibus officiis, incidunt quod asperiores impedit.</p>
+      <a href=""class="ctn">LEarn more</a>
+    </div>
+    <div class="col">
+      <img src="" alt="">
+      <h4></h4>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, provident ipsum delectus nobis velit odio itaque doloremque dolorum cupiditate error nam adipisci harum! Nisi explicabo ipsa odio officia expedita. Pariatur?</p>
+      <a href="" class="ctn"></a>
+    </div>
+   </div>
+   <section>
+
+
+
+    <section class="explre">
+      <div class="explore-content">
+        <h1></h1>
+        <div class="line"></div>
+        <p></p>
+        <a href="" class="ctn"></a>
+      </div>
+    </section>
+
+    <section class="information"> 
+      <h1></h1>
+      <div class="line">
+        <p></p>
+        <a href="" class="ctn"></a>
+      </div>
+     
+    </section>
+   </section>
     
     </h1>
 
